security/keycloak/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-route
spec:
  parentRefs:
    - name: security-gateway
      sectionName: https-keycloak
  hostnames:
    - keycloak.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: "https"
              - name: X-Forwarded-Host
                value: "keycloak.inspection.alpha.canada.ca"
      backendRefs:
        - name: keycloak
          port: 80
