security/keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    lbipam.cilium.io/ips: "10.140.79.10"
    ingress.cilium.io/loadbalancer-mode: dedicated
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - keycloak.inspection.alpha.canada.ca
      secretName: keycloak-tls
  rules:
    - host: keycloak.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
